@@ -3,6 +3,8 @@
 1. Allow configuring genre groups in LMS's settings pages.
 2. Allow configuring host of MusicIP server.
 3. Fetch filters.
+4. If fail to find any tracks, fall through to Spotty (if have Spotify tracks
+   and Spotty is installed).
 
 0.0.4
 -----
